fix property description spacing

--- a/public/style.css
+++ b/public/style.css
@@ -247,7 +247,7 @@ input:hover {
 }
 
 #property-description p {
-  margin-top: 10%;
+  margin-top: 17.5%;
   font-size: 125%;
 }
 
